<resources>
    <string name="app_name">Score</string>
    <string name="textview1">Team A</string>
    <string name="textview2">Team B</string>
    <string name="textview">AScore</string>
    <string name="textview3">BScore</string>
    <string name="button1">+1</string>
    <string name="button2">+2</string>
    <string name="button3">+3</string>
    <string name="undoButton">undo</string>
    <string name="restButton">rest</string>
</resources>
