<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable name="data" type="com.hzhztech.score.viewmodel.MyViewModel"/>
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".MainActivity">

        <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content"
                                                    android:layout_height="wrap_content"
                                                    android:id="@+id/guideline"
                                                    android:orientation="horizontal"
                                                    app:layout_constraintGuide_percent="0.15"/>
        <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content"
                                                    android:layout_height="wrap_content"
                                                    android:id="@+id/guideline3"
                                                    android:orientation="horizontal"
                                                    app:layout_constraintGuide_percent="0.35"/>
        <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content"
                                                    android:layout_height="wrap_content"
                                                    android:id="@+id/guideline4"
                                                    android:orientation="horizontal"
                                                    app:layout_constraintGuide_percent="0.5"/>
        <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content"
                                                    android:layout_height="wrap_content"
                                                    android:id="@+id/guideline6"
                                                    android:orientation="horizontal"
                                                    app:layout_constraintGuide_percent="0.8"/>
        <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content"
                                                    android:layout_height="wrap_content"
                                                    android:id="@+id/guideline8"
                                                    android:orientation="horizontal"
                                                    app:layout_constraintGuide_percent="0.9"/>
        <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content"
                                                    android:layout_height="wrap_content"
                                                    android:id="@+id/guideline7"
                                                    android:orientation="horizontal"
                                                    app:layout_constraintGuide_percent="0.65"/>
        <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content"
                                                    android:layout_height="wrap_content"
                                                    android:id="@+id/guideline5"
                                                    android:orientation="horizontal"
                                                    app:layout_constraintGuide_percent="0.35"/>
        <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content"
                                                    android:layout_height="wrap_content"
                                                    android:id="@+id/guideline2"
                                                    android:orientation="horizontal"
                                                    app:layout_constraintGuide_percent="0.05"/>
        <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content"
                                                    android:layout_height="wrap_content"
                                                    android:id="@+id/guideline9"
                                                    android:orientation="vertical"
                                                    app:layout_constraintGuide_percent="0.5"/>
        <TextView
                android:text="@string/textview1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintEnd_toStartOf="@+id/guideline9" android:layout_marginEnd="8dp"
                android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="@+id/guideline2"
                android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/guideline"
                android:textSize="@dimen/teamTextSize"/>
        <TextView
                android:text="@string/textview2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView2" app:layout_constraintStart_toStartOf="@+id/guideline9"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="@+id/guideline2"
                android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/guideline"
                android:textSize="@dimen/teamTextSize"/>
        <TextView
                android:text="@{String.valueOf(data.getaTeamScore())}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView3" android:textSize="@dimen/scoreTextSize"
                tools:text="120" android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="@+id/guideline"
                android:layout_marginEnd="8dp" app:layout_constraintEnd_toStartOf="@+id/guideline9"
                android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/guideline5"
                android:textColor="@color/colorAccent"/>
        <TextView
                android:text="@{String.valueOf(data.getbTeamScore())}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView4" android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="@+id/guideline" app:layout_constraintStart_toStartOf="@+id/guideline9"
                android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/guideline5" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" android:textSize="@dimen/scoreTextSize"
                android:textColor="@color/colorPrimary" tools:text="50"/>
        <Button
                android:onClick="@{() -> data.aTeamAdd(1)}"
                android:text="@string/button1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/button" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="@+id/guideline5"
                app:layout_constraintEnd_toStartOf="@+id/guideline9" android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/guideline4"
                android:background="@color/colorAccent" android:textColor="@android:color/white"
                android:textSize="@dimen/btnTextSize"/>
        <Button
                android:onClick="@{() -> data.bTeamAdd(1)}"
                android:text="@string/button1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/button2" android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="@+id/guideline5" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/guideline4" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" app:layout_constraintStart_toEndOf="@+id/button"
                android:layout_marginStart="8dp" android:background="@color/colorPrimary"
                android:textColor="@android:color/white" android:textSize="@dimen/btnTextSize"/>
        <Button
                android:onClick="@{() -> data.aTeamAdd(2)}"
                android:text="@string/button2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/button3" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="@+id/guideline4"
                app:layout_constraintEnd_toStartOf="@+id/guideline9" android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/guideline7"
                android:background="@color/colorAccent" android:textColor="@android:color/white"
                android:textSize="@dimen/btnTextSize"/>
        <Button
                android:onClick="@{() -> data.bTeamAdd(2)}"
                android:text="@string/button2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/button4" android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="@+id/guideline4" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/guideline7"
                app:layout_constraintStart_toStartOf="@+id/guideline9"
                android:layout_marginStart="8dp" android:background="@color/colorPrimary"
                android:textColor="@android:color/white" android:textSize="@dimen/btnTextSize"/>
        <Button
                android:onClick="@{() -> data.aTeamAdd(3)}"
                android:text="@string/button3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/button5" app:layout_constraintEnd_toStartOf="@+id/guideline9"
                android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="@+id/guideline7" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/guideline6" android:background="@color/colorAccent"
                android:textColor="@android:color/white" android:textSize="@dimen/btnTextSize"/>
        <Button
                android:onClick="@{() -> data.bTeamAdd(3)}"
                android:text="@string/button3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/button6" android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="@+id/guideline9" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="@+id/guideline7" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/guideline6" android:background="@color/colorPrimary"
                android:textColor="@android:color/white" android:textSize="@dimen/btnTextSize"/>
        <ImageView
                android:onClick="@{() -> data.undo()}"
                android:clickable="true"
                android:layout_width="50dp"
                android:layout_height="50dp" app:srcCompat="@drawable/ic_undo_black_24dp"
                android:id="@+id/imageView" android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="@+id/guideline6" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/guideline8" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toStartOf="@+id/guideline9"
                android:layout_marginEnd="8dp" app:layout_constraintHorizontal_bias="0.81"
                android:contentDescription="@string/restButton"/>

        <!--重置-->
        <ImageView
                android:onClick="@{() -> data.reset()}"
                android:clickable="true"
                android:layout_width="50dp"
                android:layout_height="50dp" app:srcCompat="@drawable/ic_loop_black_24dp"
                android:id="@+id/imageView2"
                app:layout_constraintStart_toStartOf="@+id/guideline9" android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="@+id/guideline6" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/guideline8" app:layout_constraintHorizontal_bias="0.19"
                android:contentDescription="@string/undoButton"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>